crates/strider/tests/snapshots/v3__mips32be__floats__f64_arith.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x400000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f0_1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2_3, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x3ff0000000000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "7" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "7" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "8" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "10" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x3ff0000000000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "13" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nf12_13", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "14" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="bitcast\nu64 → f64", shape=box, fillcolor="#302018"];
  "17" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="init\nf14_15", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "18" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "10" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="init\nv1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
